--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,11 @@ hr {
 .paragraph {
   text-indent: 25px;
 }
+.newSect {
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 20px;
+  line-height: 1.5;
+  border: 2px solid red;
+  border-radius: 5%;
+}
